# NIR-

./: .gitignore  IMPLEMENTATION_SUMMARY.md  PINN_LOSS_FUNCTION_UPDATE.md  VOLATILIZATION_MODEL_README.md  main.py  pyproject.toml  run-property-prediction.cmd  run-property-prediction.ps1  test_nir.py
.matplotlib/: fontlist-v390.json
python_nir_project/: NIR_PINN_COMPLETE_ARCHITECTURE.md  PINN_INTEGRATION_SUMMARY.md  README.md  requirements.txt
python_nir_project/data/: column_data.mat  test.xlsx  wavelength144.mat
python_nir_project/data/Black white/: 1-0.csv
python_nir_project/data/NIR/: 70_0_1.csv  70_0_2.csv  70_0_3.csv  70_0_4.csv  70_0_5.csv  70_0_6.csv  70_0_7.csv  70_0_8.csv  70_10_1.csv  70_10_2.csv  70_10_3.csv  70_10_4.csv  70_10_5.csv  70_10_6.csv  70_10_7.csv  70_10_8.csv  70_11_1.csv  70_11_2.csv  70_11_3.csv  70_11_4.csv  70_11_5.csv  70_11_6.csv  70_11_7.csv  70_11_8.csv  70_12_1.csv  70_12_2.csv  70_12_3.csv  70_12_4.csv  70_12_5.csv  70_12_6.csv  70_12_7.csv  70_12_8.csv  70_13_1.csv  70_13_2.csv  70_13_3.csv  70_13_4.csv  70_13_5.csv  70_13_6.csv  70_13_7.csv  70_13_8.csv  (+449 more)
python_nir_project/data/physical/: 11.csv  PH.xlsx  all_csv_data.csv  all_csv_data.csv.rej  all_csv_data_temp copy.csv  all_csv_data_temp.csv  data.csv  ganguan.xlsx  sweet.xlsx  tmpFD8D.tmp.csv  yingdu.xlsx
python_nir_project/nir_project/: __init__.py  cli.py  data.py  feature_selection.py  modeling.py  pipeline.py  preprocessing.py
python_nir_project/nir_project/pinn/: README.md  __init__.py  (+5 more)
python_nir_project/scripts/: pinn_example.py  run_property_prediction.py
(+326 files in other folders)
